Changeed server code to handle by threading

--- a/TCP Server/Dockerfile
+++ b/TCP Server/Dockerfile
@@ -1,14 +1,12 @@
 FROM ubuntu:latest
-
 WORKDIR /main
 
-COPY tcpServer.cpp .
-
 # Update the packages in Ubuntu
-RUN apt-get update && \
-    apt-get install -y g++
+RUN apt-get update && apt-get install -y --fix-missing g++
 
-# Compile the C++ file
-RUN g++ -o tcpServer tcpServer.cpp
+# Copy and compile the C++ file
+COPY tcpServer.cpp .
+RUN g++ -o tcpServer tcpServer.cpp -pthread
 
+# Set the command to run on container start
 CMD ["./tcpServer"]
